--- a/index.html
+++ b/index.html
@@ -50,26 +50,30 @@
         </div><!--MOBILE-->
         </header>
         <main>
-            <section class="destaque">
-                <div class="destaque-txt">
-                    <h1>Descobrindo novas culturas <br> e paisagens deslumbrantes.</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ab perferendis distinctio
-                        commodi ipsam, nam, iste blanditiis ipsa voluptas omnis autem temporibus, quis nisi! Itaque quo
-                        reprehenderit dolorum nulla voluptatum.
-                    </p>
-                    <div class="main-btn">
-                        <button><a href="#">Viaje Agora</a></button>
-                        <a href="#">Agende sua viajem</a>
+            <div class="interface">
+                <section class="destaque">
+                    <div class="destaque-txt">
+                        <h1>Descobrindo novas culturas <br> e paisagens deslumbrantes.</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae ab perferendis distinctio
+                            commodi ipsam, nam, iste blanditiis ipsa voluptas omnis autem temporibus, quis nisi! Itaque quo
+                            reprehenderit dolorum nulla voluptatum.
+                        </p>
+                        <div class="main-btn">
+                            <button><a href="#">Viaje Agora</a></button>
+                            <a href="#">Agende sua viajem</a>
+                        </div>
                     </div>
-                </div>
-            </section> <!--DESTAQUE-->
+                </section> <!--DESTAQUE-->
+            </div>
         </main>
 
         <footer>
-            <a target="_blank"
-                href="https://br.freepik.com/fotos-gratis/femininos-turistas-na-mao-tem-um-mapa-de-viagem-feliz_3953424.htm#query=mulher%20viagem&position=13&from_view=search&track=ais&uuid=f9e4efc5-f5d6-4dcb-8037-4bfa2e5b8b88">Imagem
-                de jcomp Frepik</a>
+            <div class="interface">
+                <a target="_blank"
+                    href="https://br.freepik.com/fotos-gratis/femininos-turistas-na-mao-tem-um-mapa-de-viagem-feliz_3953424.htm#query=mulher%20viagem&position=13&from_view=search&track=ais&uuid=f9e4efc5-f5d6-4dcb-8037-4bfa2e5b8b88">Imagem
+                    de jcomp Frepik</a>
+            </div>
         </footer>
     </div>
     </div>
